src/test/deca/syntax/valid/extend_classe_pars_01.deca
// Description:
//    Programme testant l'implémentation de "extends".
//
// Resultats:
//
//
//
// Historique:
//    cree le 13/01/2023


class A {
}
class B extends A {

}