src/test/deca/syntax/invalid/pvirgule_pars_01.deca
// Description:
//    Programme minimaliste qui teste la détection de points virgules par le parser.
//
// Resultats:
//      Erreur ligne 11: ";" missing
//
// Historique:
//    cree le 01/01/2023

{
     int x
}